WebApplication2/k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  selector:
    app: postgres # Tells the service to route traffic to pods carrying this label

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
