WebApplication2/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: webapi-service # name of the service

spec:
  type: NodePort

  selector:
    app: webapi # link the service to these pods with this name in Deployment

  ports:
    - port: 80 # # The port the Service exposes internally to the cluster
      targetPort: 8080  # The port matching the containerPort in your deployment
      nodePort: 30080 #The external port you will use to visit the app in your browser
