WebApplication2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: webapi-ingress


spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api # /api ->/x/y/z
            pathType: Prefix
            backend:
              service:
                name: webapi-service
                port:
                  number: 80
